# prog1-codigos

./: 14AEjer1 (1).cpp  14AEjer3.cpp  14aEjer2 (1).cpp  2aEjem1_conteo.cpp  2aEjem2_dig.cpp  2aEjem4_ajedrez.cpp  2aEjer3_num.cpp  2bEjem1.cpp  2bEjer1_primos.cpp  3aEjem2_menu.cpp  3aEjem3_capicua.cpp  3aEjem4_func.cpp  3bEjem2_mul.cpp  3bEjer1_mf.cpp  3bEjer2_seq.cpp  4aEjem2.cpp  4aEjer1_Factorial.cpp  4aEjer2_char.cpp  4aEjer3_par.cpp  4aEjer6.cpp  4aEjer8.cpp  4bEjem1.cpp  4bEjem1_mul5.cpp  5aEjem.cpp  Ccomplejo.h  Tipos.h  main.cpp  numeros.txt  s1aEjemplo1.cpp  s1aEjemplo6.cpp  s1bEjemplo1.cpp  s1bEjemplo2.cpp  s1bEjemplo3.cpp
Sesion 13A Sobrecarga/: 13AEjem4.cpp  Entero.h
sesion 10A Relaciones/: 10aEjer1.cpp  Cliente.h  Pedido.h
sesion 10B matricula/: CMakeLists.txt  Profesor.h  Seccion.h  main.cpp
sesion 11A herencia/: 11AEjem1.cpp  11bEjer2Alimento.cpp  Alimento.h
sesion 11A herencia/animales/: CAlimento.cpp  CAlimento.h  CAnimal.cpp  CAnimal.h  CAve.cpp  CAve.h  CDomestico.cpp  CDomestico.h  CFelino.cpp  CFelino.h  CGallina.cpp  CGallina.h  CGato.cpp  CGato.h  CMakeLists.txt  CMamifero.cpp  CMamifero.h  CPerro.cpp  CPerro.h  Tipos.h  UFunciones.h
sesion 5A/: 5aEjem.cpp  5aEjem2_mul5.cpp  5aEjer4_estad.cpp  CMakeLists.txt  arreglo.cpp  arreglo.h
sesion 6/: 6aEjem1_pares.cpp  6aEjem2_rotar.cpp  6aEjer3_garzas.cpp  (+3 more)
sesion 9/: 9aEjer1_Complejo.cpp  9aEjer3_punteros.cpp  9aEjer4_tvector.cpp  9bEjer1_curso.cpp  CAlumno.cpp  CAlumno.h  CCurso.cpp  CCurso.h  CMakeLists.txt  CProfesor.cpp  CProfesor.h  Complejo.cpp  Complejo.h  TVector.cpp  TVector.h
(+41 files in other folders)
